--- a/installer/wix/Product.wxs
+++ b/installer/wix/Product.wxs
@@ -25,9 +25,15 @@
       </Directory>
     </Directory>
 
-    <Feature Id="Desktop" Title="Desktop" Level="1" />
-    <Feature Id="ApiService" Title="ApiService" Level="1" />
-    <Feature Id="OracleClient" Title="OracleClient" Level="1" />
+    <Feature Id="Desktop" Title="Desktop" Level="1">
+      <ComponentGroupRef Id="CG.Desktop" />
+    </Feature>
+    <Feature Id="ApiService" Title="ApiService" Level="1">
+      <ComponentGroupRef Id="CG.Api" />
+    </Feature>
+    <Feature Id="OracleClient" Title="OracleClient" Level="1">
+      <ComponentGroupRef Id="CG.OracleClient" />
+    </Feature>
 
     <UIRef Id="WixUI_InstallDir" />
   </Product>
