--- a/installer/wix/Product.wxs
+++ b/installer/wix/Product.wxs
@@ -30,6 +30,7 @@
     </Feature>
     <Feature Id="ApiService" Title="ApiService" Level="1">
       <ComponentGroupRef Id="CG.Api" />
+      <ComponentGroupRef Id="CG.Config" />
     </Feature>
     <Feature Id="OracleClient" Title="OracleClient" Level="1">
       <ComponentGroupRef Id="CG.OracleClient" />
