--- a/installer/wix/Product.wxs
+++ b/installer/wix/Product.wxs
@@ -23,13 +23,18 @@
           <Directory Id="CONFIGDIR" Name="config" />
         </Directory>
       </Directory>
+      <Directory Id="ProgramMenuFolder">
+        <Directory Id="ProgramMenuDir" Name="AplicacionPyme" />
+      </Directory>
     </Directory>
 
     <Feature Id="Desktop" Title="Desktop" Level="1">
       <ComponentGroupRef Id="CG.Desktop" />
+      <ComponentGroupRef Id="CG.Shortcuts" />
     </Feature>
     <Feature Id="ApiService" Title="ApiService" Level="1">
       <ComponentGroupRef Id="CG.Api" />
+      <ComponentGroupRef Id="CG.Logs" />
     </Feature>
     <Feature Id="OracleClient" Title="OracleClient" Level="1">
       <ComponentGroupRef Id="CG.OracleClient" />
